# pyhip

./: .gitignore  README.md  pyhip.py  pyproject.toml  setup.py
archive/bank-conflict/: buff_load_lds.cpp  buff_load_lds.py  dsread_test.cpp  test.py
archive/ck_tile/: README.md  gemm-ck.cpp
archive/gemm/: bench-mfma.py  gemm-f16.py  gemm-ilp.cpp  inst-sched.py  mfma-layout.py
archive/jit/: asm_build.py  test-cdna4-fp4gemm.py  test-expr.py  test-expr2.py  test-fused-moe.py  test-jit.py  trace.yaml  ttt.cpp
archive/mem-bw/: bw.cpp  test-bw.py
archive/mem-coalescing/: main.cpp  test.py
archive/paged-attention/: pa-256.cpp  pa-inline.cpp  pa.cpp  test-pa-256.py  test-pa.py
docs/: LayoutAlgebra.ipynb  cute_layout.py  debug-flydsl.md  debug-llvm-lds-dma.md  debug-llvm-mi-sched.md  debug-llvm-sched-group.md  debug-llvm.md  debug-python.md  debug-vllm.md  mem_latency.cpp  mem_latency.md  profile-amdgpu.md  profile-gpu.md  run-docker-with-amdgpu.md  tbaa.md  test-mi-sched.cpp  test-reg-vars.cpp  vm_cnt.md
docs/gdn_op_doc/: chunk_kkt_solve_kernel.md  gdn_cp_zigzag.md  gdn_decode_ref.py  gdn_kkt_solve_one_vs_two.md  gdn_matrix_inversion.md  gdn_overview.md  gdn_triton.txt  gdn_triton_kernel.md  verify_kkt_one_vs_two.py
docs/learn_flydsl/: README.md  ast_rewrite.py  atom_mma.py  atomic.py  cute_layout.py  fx_utils.py  gemm0.py  gemm1.py  gemm2.py  gemm3.py  gemm4.py  (+6 more)
pyhip/: __init__.py  __main__.py  asmjit.py  asmtools.py  hiptools.py  jit.py  probe.py
src/: __init__.py  __main__.py  exts.py  hsaco_tools.py  misc.py  probe.py
tests/: conftest.py  v3input.yaml
(+548 files in other folders)
