[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhip"
version = "1.0.0"
requires-python = ">=3.8"
dependencies = ["filelock", "numpy"]
description = "Python AMDGPU kernel developing tool"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]

[tool.setuptools]
packages = ["pyhip"]
package-dir = {"pyhip" = "src"}
