[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhip"
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = ["filelock", "numpy"]
description = "Python AMDGPU kernel developing tool"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]

[tool.setuptools_scm]
# Used when building from an sdist or tree without VCS metadata.
fallback_version = "1.0.0"

[tool.setuptools]
# `package-dir` maps the `pyhip` package root to `src/`. Declaring only `pyhip`
# installs flat modules there and skips subdirs; `core`/`contrib` must be listed.
packages = [
    "pyhip",
    "pyhip.core",
    "pyhip.contrib",
    "pyhip.contrib.common",
    "pyhip.contrib.gluon",
    "pyhip.contrib.flydsl",
]
package-dir = {"pyhip" = "src"}
